--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -1,65 +1,160 @@
-.top-nav,
-.main-nav {
+nav {
+  padding: 20px 50px;
   display: flex;
+  justify-content: space-evenly;
   align-items: center;
-  padding: 10px 20px;
-}
 
-.top-nav {
-  justify-content: flex-end;
-  border-bottom: 1px solid rgb(208, 208, 208);
-  .flex-column{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  h1 {
+    cursor: pointer;
   }
-  li:first-child {
-    margin-right: 30px;
-  }
-  img {
-    width: 30px;
-  }
-}
 
-.main-nav {
-  justify-content: space-between;
-  img {
-    width: 40px;
-  }
-  .name {
+  .menu {
     display: flex;
     align-items: center;
-    span {
-      font-size: 24px;
+    justify-content: space-between;
+
+    .main-nav {
+      display: flex;
+      align-items: center;
+    }
+
+    ul {
+      display: flex;
+
+      li {
+        margin-left: 15px;
+        position: relative;
+        cursor: pointer;
+        padding-bottom: 5px;
+
+        &::after {
+          content: '';
+          position: absolute;
+          bottom: -2px;
+          left: 0;
+          width: 100%;
+          height: 1px;
+          background-color: transparent;
+          transition: background-color 0.3s ease-in-out;
+        }
+
+        &:hover::after {
+          background-color: #515151;
+        }
+      }
     }
   }
-  .nav-links {
-    font-size: 20px;
+
+  .custom-select {
+    position: relative;
+  }
+
+  .select-button {
+    all: unset;
+    cursor: pointer;
+    padding: 5px 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    width: 70px;
+    text-align: center;
+  }
+
+  .options {
+    position: absolute;
+    top: calc(100% + 5px);
+    left: 0;
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 4px;
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
     display: flex;
-    li:not(:last-child) {
+    flex-direction: column;
+    width: 150px;
+  }
+
+  .options li {
+    padding: 5px;
+    transition: background-color 0.3s ease-in-out;
+
+    &:hover {
+      background-color: #f1f1f1;
+    }
+  }
+
+  .right-nav {
+    display: flex;
+    align-items: center;
+    margin-left: 50px;
+    column-gap: 10px;
+  }
+
+  .burger {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 25px;
+    height: 20px;
+    cursor: pointer;
+    margin-left: 15px;
+    visibility: hidden;
+
+    .line {
+      width: 100%;
+      height: 2px;
+      background-color: #515151;
+    }
+  }
+
+  input {
+    background-image: url(../../assets/search.svg);
+    background-position: left;
+    background-repeat: no-repeat;
+    background-size: 20px;
+    outline: none;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+
+    &:focus,
+    &:hover {
+      background-color: #e1e1e1;
+    }
+  }
+
+  img {
+    width: 30px;
+
+    &:hover {
+      opacity: 0.6;
+      cursor: pointer;
+    }
+
+    &:first-child {
       margin-right: 50px;
     }
   }
-  .right-nav {
-    display: flex;
-    input {
-      outline: none !important;
-      background: url("../../assets/search.svg") left center/20px no-repeat;
-      padding-left: 40px;
-      border: none;
-      background-color: #ececec;
-      border-radius: 10px;
-      height: 40px;
-      opacity: 0.6;
-      margin-right: 20px;
-      
-      &:hover, &:focus {
-        opacity: 1;
+
+  @media (max-width: 1000px) {
+    .menu {
+      ul {
+        display: none;
+        flex-direction: column;
+        align-items: flex-start;
       }
-    }
-    .images img:hover {
-      opacity: 0.6;
-      cursor: pointer;
+
+      &.open {
+        ul {
+          display: flex;
+        }
+      }
+
+      flex-direction: column;
+      align-items: flex-start;
+
+      .burger {
+        visibility: visible;
+        margin: 0;
+      }
     }
   }
 }
