--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -136,15 +136,28 @@ nav {
 
   @media (max-width: 1000px) {
     .menu {
+      position: absolute;
+      top: 29px;
+      left: 30px;
+      height: 340px;
+      
       ul {
         display: none;
         flex-direction: column;
         align-items: flex-start;
+        font-size: small;
       }
 
       &.open {
+        width: 50%;
+        background: white;
+        box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+        
         ul {
           display: flex;
+          z-index: 10;
+          row-gap: 50px;
+          padding: 40px 0px;
         }
       }
 
@@ -155,6 +168,27 @@ nav {
         visibility: visible;
         margin: 0;
       }
+    }
+  }
+}
+
+@media (max-width: 570px) {
+  h1 {
+    font-size: 16px;
+  }
+
+  nav {
+    .line {
+      width: 50% !important;
+      height: 2px;
+      background-color: #515151;
+    }
+    img {
+      width: 25px;
+    }
+
+    input {
+      width: 5px;
     }
   }
 }
