--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,9 @@ button{
     text-align: center;
     border-radius: 4px;
 }
-
+img{
+    cursor: pointer;
+}
 input{
     cursor: pointer;
     outline: none;
