--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -8,7 +8,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-
+    z-index: 10;
     .main-nav {
       display: flex;
       align-items: center;
@@ -130,7 +130,7 @@ nav {
         ul {
           width: 100%;
           display: flex;
-          z-index: 10;
+          z-index: 100 !important;
           row-gap: 50px;
           padding: 40px 0px;
           align-items: center;
