--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -8,7 +8,8 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    z-index: 10;
+    z-index: 50;
+
     .main-nav {
       display: flex;
       align-items: center;
@@ -16,11 +17,13 @@ nav {
 
     ul {
       display: flex;
+
       li {
         margin-left: 15px;
         position: relative;
         cursor: pointer;
         padding-bottom: 5px;
+
         &::after {
           content: '';
           position: absolute;
@@ -31,6 +34,7 @@ nav {
           background-color: transparent;
           transition: background-color 0.3s ease-in-out;
         }
+
         &:hover::after {
           background-color: #515151;
         }
@@ -57,9 +61,11 @@ nav {
     display: flex;
     flex-direction: column;
     width: 150px;
+
     li {
       padding: 5px;
       transition: background-color 0.3s ease-in-out;
+
       &:hover {
         background-color: #f1f1f1;
       }
@@ -81,6 +87,7 @@ nav {
     height: 20px;
     margin-left: 15px;
     visibility: hidden;
+
     .line {
       width: 100%;
       height: 2px;
@@ -103,9 +110,11 @@ nav {
 
   img {
     width: 30px;
+
     &:hover {
       opacity: 0.6;
     }
+
     &:first-child {
       margin-right: 50px;
     }
@@ -115,34 +124,39 @@ nav {
     .menu {
       position: absolute;
       top: 29px;
-      left: 0px;
+      left: 0;
       height: 340px;
+
       ul {
         display: none;
         flex-direction: column;
         align-items: flex-start;
         font-size: small;
       }
+
       &.open {
         background: white;
         box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
-        width: -webkit-fill-available;
+        width: 100%;
         ul {
           width: 100%;
           display: flex;
-          z-index: 100 !important;
+          z-index: 100;
           row-gap: 50px;
           padding: 40px 0px;
           align-items: center;
+
           li {
-            margin: 0 auto !important;
+            margin: 0 auto;
             width: 50%;
             text-align: center;
           }
         }
       }
+
       flex-direction: column;
       align-items: flex-start;
+
       .burger {
         visibility: visible;
         margin-left: 30px;
@@ -154,27 +168,34 @@ nav {
     h1 {
       font-size: 16px;
     }
+
     img {
       width: 20px;
     }
+
     nav {
       padding: 20px 0;
     }
+
     .right-nav {
       margin-left: 5px !important;
+
       input {
         width: 20px;
       }
     }
+
     .line {
-      width: 50% !important;
+      width: 50%;
       height: 2px;
       background-color: #515151;
     }
+
     .expanded-search {
       display: flex;
       align-items: center;
     }
+
     .expanded-search input {
       width: 80px;
     }
