--- a/src/Components/Slider/Slider.scss
+++ b/src/Components/Slider/Slider.scss
@@ -1,15 +1,91 @@
-.wrapper {
-    position: relative;
+.image-slider {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  .arrowLeft,
+  .arrowRight {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 20;
+    transition: transform 0.2s ease-in-out;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    border-radius: 50%;
+    padding: 5px;
+    height: 30px;
+    width: 30px;
+    background: white;
+    cursor: pointer;
+
+    &:hover {
+      transform: translateY(-50%) scale(1.1);
+      overflow: hidden;
+    }
+  }
+
+  .arrowLeft {
+    left: 35px;
+
     img {
       width: 100%;
+    }
+  }
+
+  .arrowRight {
+    right: 35px;
+
+    img {
+      width: 30px;
+    }
+  }
+
+  .wrapper {
+    position: relative;
+
+    img {
+      width: 100%;
+      max-height: 200px;
       cursor: auto;
     }
-  
+
     button {
       position: absolute;
       z-index: 5;
       top: 40%;
       left: 30%;
+
+      &:hover {
+        transform: scale(1);
+      }
     }
   }
-  
+
+  @media (min-width: 570px) {
+    max-width: 70%;
+    margin: 0 auto;
+
+    .arrowLeft {
+      left: 0;
+    }
+
+    .arrowRight {
+      right: 0;
+    }
+
+    .wrapper {
+      img {
+        max-height: 300px;
+      }
+    }
+  }
+
+  @media (min-width: 1000px) {
+    .wrapper {
+      img {
+        max-height: 500px;
+      }
+    }
+  }
+}
