--- a/src/Components/Slider/Slider.scss
+++ b/src/Components/Slider/Slider.scss
@@ -48,16 +48,29 @@
       width: 100%;
       max-height: 200px;
       cursor: auto;
+      margin-bottom: 10px;
     }
 
-    button {
+    button{
       position: absolute;
       z-index: 5;
-      top: 40%;
-      left: 30%;
+      left: 50%;
+      transform: translateX(-50%);
+      transition: 0.3s;
+      color: white;
+      top: 95%;
+      width: 100px;
+      border-radius: 10px;
+      padding: 10px;
+      font-size: 12px;
+       &:hover {
+        background-color: var(--hover-color);
+      }
 
-      &:hover {
-        transform: scale(1);
+      @media (min-width:1000px) {
+        width: 140px;
+        height: 30px;
+        font-size: 16px;
       }
     }
   }
