--- a/src/Components/Slider/Slider.scss
+++ b/src/Components/Slider/Slider.scss
@@ -3,6 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 70vh;
 
   .arrowLeft,
   .arrowRight {
@@ -46,7 +47,7 @@
 
     img {
       width: 100%;
-      max-height: 200px;
+      max-height: 500px;
       cursor: auto;
       margin-bottom: 10px;
     }
@@ -87,18 +88,6 @@
       right: 0;
     }
 
-    .wrapper {
-      img {
-        max-height: 300px;
-      }
-    }
   }
 
-  @media (min-width: 1000px) {
-    .wrapper {
-      img {
-        max-height: 500px;
-      }
-    }
-  }
 }
