--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,24 @@
     list-style: none;
     text-decoration: none;
 }
+body::-webkit-scrollbar {
+    width: 10px;
+}
+  
+body::-webkit-scrollbar-track {
+    background-color: #ebebeb;
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+}
+  
+body::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: #6d6d6d;
+}
 button{
     all: unset;
-    cursor: pointer;
+    cursor: pointer !important;
     text-align: center;
     border-radius: 4px;
 }
