--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,11 @@ body::-webkit-scrollbar-thumb {
     border-radius: 10px;
     background: #6d6d6d;
 }
+
+body{
+    background-color: #f1f3f6;
+}
+
 button{
     all: unset;
     cursor: pointer !important;
