popup starter structure

--- a/src/Components/PopularProducts/index.scss
+++ b/src/Components/PopularProducts/index.scss
@@ -143,3 +143,11 @@
     }
   }
 }
+
+.coming-soon {
+  width: 100%;
+  max-height: 50vh;
+  margin-bottom: 200px;
+  height: fit-content;
+  object-fit: cover;
+}
