--- a/src/Components/Navbar/index.scss
+++ b/src/Components/Navbar/index.scss
@@ -1,217 +1,100 @@
-$color-primary: #515151;
-$color-secondary: #e1e1e1;
-$color-hover: #f1f1f1;
-$box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
-
-nav {
-  padding: 20px 80px;
+header {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-  position: fixed;
-  z-index: 99;
-  background: white;
-  width: 100%;
-
-  .menu {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    z-index: 50;
-
-    .main-nav {
-      display: flex;
-      align-items: center;
-    }
-
-    ul {
-      display: flex;
-
-      li {
-        margin-left: 15px;
-        position: relative;
-        cursor: pointer;
-        padding-bottom: 5px;
-
-        &::after {
-          content: '';
-          position: absolute;
-          bottom: -2px;
-          left: 0;
-          width: 100%;
-          height: 1px;
-          background-color: transparent;
-          transition: background-color 0.3s ease-in-out;
-        }
-
-        &:hover::after {
-          background-color: $color-primary;
-        }
-      }
-    }
-  }
-
-  .custom-select {
+  justify-content: space-between;
+  height: 80px;
+  padding: 0 50px;
+    
+  a {
+    margin: 0 16px;
+    text-decoration: none;
+    color: black;
+    font-weight: 600;
+    display: inline-block;
     position: relative;
-  }
 
-  .select-button {
-    padding: 5px 10px;
-    width: 100px;
-  }
-
-  .options {
-    position: absolute;
-    top: calc(100% + 5px);
-    left: 0;
-    background-color: #fff;
-    padding: 10px;
-    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
-    display: flex;
-    flex-direction: column;
-    width: 150px;
-
-    li {
-      padding: 5px;
-      transition: background-color 0.3s ease-in-out;
-
-      &:hover {
-        background-color: $color-hover;
-      }
-    }
-  }
-
-  .right-nav {
-    display: flex;
-    align-items: center;
-    margin-left: 50px;
-    column-gap: 10px;
-  }
-
-  .burger {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 25px;
-    height: 20px;
-    margin-left: 15px;
-    visibility: hidden;
-
-    .line {
-      width: 100%;
-      height: 2px;
-      background-color: $color-primary;
-    }
-
-    .close {
-      width: 25px;
-    }
-  }
-
-  input {
-    background-image: url(../../assets/search.svg);
-    background-position: left;
-    background-repeat: no-repeat;
-    background-size: 20px;
-    padding: 10px 20px;
-
-    &:focus,
-    &:hover {
-      background-color: $color-secondary;
-    }
-  }
-
-  img {
-    width: 30px;
-
-    &:hover {
-      opacity: 0.6;
-    }
-
-    &:first-child {
-      margin-right: 50px;
-    }
-  }
-
-  @media (max-width: 1000px) {
-    .menu {
+    &::after{
+      content: '';
       position: absolute;
-      top: 29px;
+      width: 100%;
+      transform: scaleX(0);
+      height: 2px;
+      bottom: -10px;
       left: 0;
-      height: 340px;
-      flex-direction: column;
-      align-items: flex-start;
+      background-color: #0087ca;
+      transform-origin: bottom right;
+      transition: transform 0.25s ease-out;
+    }
 
-      .burger {
-        visibility: visible;
-        margin-left: 30px;
-      }
-
-      ul {
-        display: none;
-        flex-direction: column;
-        align-items: flex-start;
-        font-size: small;
-      }
-
-      &.open {
-        background: white;
-        box-shadow: $box-shadow;
-        width: 100%;
-
-        ul {
-          width: 100%;
-          display: flex;
-          z-index: 100;
-          row-gap: 50px;
-          padding: 40px 0px;
-          align-items: center;
-
-          li {
-            margin: 0 auto;
-            width: 50%;
-            text-align: center;
-          }
-        }
-      }
+    &:hover::after{
+      transform: scaleX(1);
+      transform-origin: bottom left;
     }
   }
 
-  @media (max-width: 570px) {
-    h1 {
-      font-size: 16px;
+  .nav-btn {
+    padding: 5px;
+    background: transparent;
+    visibility: hidden;
+    opacity: 0;
+    font-size: 30px;
+  }
+
+  img{
+    width: 60px;
+  }
+
+  .icons svg{
+    width: 25px;
+    height: 25px;
+    margin-left: 10px;
+
+    &:hover{
+      fill: #4169e1;
+      cursor: pointer;
     }
+  } 
+  
+}
 
-    img {
-      width: 20px;
-    }
+header div,
+nav {
+  display: flex;
+  align-items: center;
+}
 
-    nav {
-      padding: 20px 0;
-    }
+@media (max-width: 1024px) {
+  header .nav-btn {
+    visibility: visible;
+    opacity: 1;
+  }
 
-    .right-nav {
-      margin-left: 5px !important;
+  header nav {
+    position: fixed;
+    top: -100vh;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+  }
 
-      input {
-        width: 20px;
-      }
-    }
+  header .responsive_nav {
+    transform: translateY(100vh);
+    background-color: lightgrey;
+    z-index: 99;
+  }
 
-    .line {
-      width: 50%;
-      height: 2px;
-      background-color: $color-primary;
-    }
+  nav .nav-close-btn {
+    position: absolute;
+    top: 15px;
+    right: 45px;
+  }
 
-    .expanded-search {
-      display: flex;
-      align-items: center;
-
-      input {
-        width: 80px;
-      }
-    }
+  nav a {
+    font-size: 20px;
   }
 }
