--- a/src/Components/Navbar/index.scss
+++ b/src/Components/Navbar/index.scss
@@ -5,7 +5,7 @@ header {
   height: 80px;
   padding: 0 50px;
     
-  a {
+  nav a {
     margin: 0 16px;
     text-decoration: none;
     color: black;
@@ -42,6 +42,9 @@ header {
 
   img{
     width: 60px;
+    &:hover{
+      text-decoration: none !important;
+    }
   }
 
   .icons svg{
