--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -4,6 +4,7 @@ footer{
     background-color: #2E2E2E;
     color: #F9F6EE;
     text-align: center;
+    margin-top: 150px;
 
     h3{
         margin-bottom: 20px;
