--- a/src/styles/category.module.scss
+++ b/src/styles/category.module.scss
@@ -20,16 +20,16 @@ ul{
           border: 1px solid rgb(123, 123, 123);
         }  
 
-        .product-link{
+        .productLink{
             color: black !important;
             
-            .product-container {
+            .productContainer {
               overflow: hidden;
               display: flex;
               flex-direction: column;
               text-align: center;
       
-              .image-wrapper {
+              .imageWrapper {
                 height: 300px;
                 display: flex;
                 align-items: center;
@@ -43,15 +43,15 @@ ul{
                 }
             }
       
-            &:hover .image-wrapper img {
+            &:hover .imageWrapper img {
                 transform: scale(1.03);
             }
       
-            .product-info {
+            .productInfo {
                 margin-top: 10px;
             }
         }
-        .rating-info {
+        .ratingInfo {
             position: absolute;
             top: 0%;
             right: 0%;
@@ -68,7 +68,7 @@ ul{
             }
           }
     }
-    .button-overlay {
+    .buttonOverlay {
         position: relative;
         top: 0;
         left: 50%;
@@ -88,7 +88,7 @@ ul{
         }
     }
     
-        &:hover .button-overlay {
+        &:hover .buttonOverlay {
             opacity: 1;
         }
     }
