scss module files renamed

--- a/src/pages/Home/CoverPhoto/coverPhoto.module.scss
+++ b/src/pages/Home/CoverPhoto/coverPhoto.module.scss
@@ -1,9 +1,9 @@
-.image-slider {
+.imageSlider {
   position: relative;
   object-fit: contain;
 
   .wrapper {
-    background-image: url("../../../../assets/main\ image.gif");
+    background-image: url("../../../assets/main\ image.gif");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
