--- a/src/pages/Home/Popup/popup.module.scss
+++ b/src/pages/Home/Popup/popup.module.scss
@@ -20,7 +20,7 @@
       margin-top: 20px;
     }
   
-    .popup-content {
+    .popupContent {
       button {
         position: relative;
         top: 0;
