--- a/src/pages/PopularProductsDetails/popularProducts.module.scss
+++ b/src/pages/PopularProductsDetails/popularProducts.module.scss
@@ -24,7 +24,7 @@
         margin-top: 20px;
     }
 
-    .product-info{
+    .productInfo{
         display: flex;
         flex-direction: column;
         row-gap: 20px;
@@ -35,7 +35,7 @@
             margin-top: 0 !important;
         }
 
-        .button-container{
+        .buttonContainer{
             width: 50%;
             margin: 0 auto;
             display: flex;
