--- a/src/pages/PopularProductsDetails/popularProducts.module.scss
+++ b/src/pages/PopularProductsDetails/popularProducts.module.scss
@@ -7,6 +7,7 @@
     padding: 0 50px;
     margin-top: 50px;
     margin-bottom: 150px;
+    position: relative;
 
     h1{
         font-size: 20px;
@@ -63,6 +64,19 @@
 
             &:hover{
                 opacity: 0.7;
+            }
+        }
+        .addToWishList{
+            position: absolute;
+            right: 50px;
+            top: -50px;
+            opacity: 0.7;
+            
+            svg{
+                width: 30px;
+                &:hover{
+                    fill: red;
+                }
             }
         }
     }
