--- a/src/pages/PopularProductsDetails/popularProducts.module.scss
+++ b/src/pages/PopularProductsDetails/popularProducts.module.scss
@@ -56,11 +56,16 @@
             }
         }
 
-        .addToCart{
+        a .addToCart{
+            width: 100%;
+            color: black;
             background: lightblue;
             height: 40px;
             border-radius: 30px;
             transition: 0.5s;
+            display: flex;
+            align-items: center;
+            justify-content: center;
 
             &:hover{
                 opacity: 0.7;
