shopping cart functionality

--- a/src/pages/PopularProductsDetails/popularProducts.module.scss
+++ b/src/pages/PopularProductsDetails/popularProducts.module.scss
@@ -56,7 +56,7 @@
             }
         }
 
-        a .addToCart{
+        .addToCart{
             width: 100%;
             color: black;
             background: lightblue;
