--- a/src/pages/PopularProductsDetails/popularProducts.module.scss
+++ b/src/pages/PopularProductsDetails/popularProducts.module.scss
@@ -1,3 +1,20 @@
+.shoppingCartMessage{
+    width: 50%;
+    margin: 0 auto;
+    padding: 10px;
+    position: relative;
+    border-radius: 5px;
+    box-shadow: 0 0 7px 1px #cccccc;
+    background-color: white;
+    border-left: 10px solid lightblue;
+    margin-top: 30px;
+    text-align: center;
+
+    @media (min-width: 1000px) {
+        width: 20%;
+    }
+}
+
 .container{
     height: 85vh;
     background-color: white;
