changed main image

--- a/src/pages/Home/CoverPhoto/coverPhoto.module.scss
+++ b/src/pages/Home/CoverPhoto/coverPhoto.module.scss
@@ -3,7 +3,7 @@
   object-fit: contain;
 
   .wrapper {
-    background-image: url("../../../assets/main\ image.gif");
+    background-image: url("../../../assets/main\ image.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
